Stylesheets/contact.css
/*------------------COPYRIGHT------------------*
* ALL RIGHTS RESERVED TO VLAD BALANESCU, 2017  *
* Personal Website                             *
* NOTICE:  All  information  contained  herein *
*          is and remains  the   property   of *
*          Vlad Balanescu.  The   intellectual *
*          and technical  concepts   contained *
*          herein  are proprietary   to   Vlad *
*          Balanescu.   Dissemination  of this *
*          information   or   reproduction  of *
*          this material is strictly forbidden *
*          unless prior written  permission is *
*          obtained    from     Vlad Balanescu.*
----------------------------------------------*/


/*----------Slide show----------------------------*/

#slide-container {
    width: 100%;
    overflow: hidden;
    box-shadow: 0px 3px #0F2157;
}


/*----------Slide show----------------------------*/


/*----------Main content----------------------------*/

#wraper {
    background-image: url("../Multimedia/Wraper.jpg");
    background-size: 1100px 1020px;
    border: 1px solid #000000;
    box-shadow: 3px 3px 0px #000000;
    border-radius: 10px;
    width: 40vw;
    padding: 1vw 1vw;
    margin: 50px auto 20px auto;
}

#innerWraper {
    padding: 0.5vw 0.5vw 3vw 0.5vw;
    background-color: #F8F8F8;
    border: 1px solid #000000;
    border-radius: 10px;
}

#title {
    color: #093f89;
    font-size: 2vw;
    font-family: "Arial", serif;
    font-weight: bold;
    text-align: center;
    margin: 3vw auto;
}

#infoText {
    font-family: "Arial", serif;
    font-size: 1vw;
    margin: 0px 50px 50px 50px;
    text-align: justify;
}


/*----------Form----------------------------*/

.star {
    color: red;
    font-family: "Monotype Corsiva", serif;
    font-style: italic;
    font-size: 17px;
}

#name {
    font-family: "Calibri", "Arial", "Serif";
    margin: 0 1vw 0.5vw 5.8vw;
    font-size: 1vw;
    font-weight: bold;
}

#eMail {
    font-family: "Calibri", "Arial", "Serif";
    margin: 0 0.2vw 0.5vw 5.7vw;
    font-size: 1vw;
    font-weight: bold;
}

#message {
    font-family: "Calibri", "Arial", "Serif";
    font-size: 1vw;
    margin: 0 0.2vw 0.5vw 4.6vw;
    font-weight: bold;
    float: left;
}

.inputText {
    color: black;
    font-family: "Calibri", "Arial", "Serif";
    font-size: 0.8vw;
    font-style: italic;
    width: 23vw;
}

#antispam {
    display: none;
}

#checkBoxArea {
    margin: 1vw 0 0 12.8vw;
}

#checkBoxArea p {
    margin-right: 1vw;
    font-family: "Calibri", "Arial", "Serif";
    font-weight: bold;
    font-size: 1vw;
    width: 1vw;
    height: 1vw;
    display: inline;
}

#textArea {
    color: black;
    font-family: "Calibri", "Arial", "Serif";
    font-size: 0.8vw;
    font-style: italic;
    width: 23vw;
    height: 8vw;
    resize: none;
}

#send {
    width: 2vw;
    background-color: #1F3370;
    font-size: 1vw;
    font-style: italic;
    font-family: serif;
    font-weight: bold;
    color: transparent;
    /*No cursor*/
    text-shadow: 0px 0px 0px white;
    /*Text color*/
    cursor: pointer;
    border: 1px solid #000000;
    border-radius: 10px;
    padding: 0.5vw 1.5vw;
    margin: 0.8vw 0.5vw 5vw 15vw;
}

#reset {
    background-color: #1F3370;
    font-size: 1vw;
    font-style: italic;
    font-family: serif;
    font-weight: bold;
    color: white;
    border: 1px solid #000000;
    border-radius: 10px;
    cursor: pointer;
    padding: 0.55vw 1.5vw;
}

#send:hover, #reset:hover {
    color: #66ffff;
    -webkit-transition: 0.8s;
    -moz-transition: 0.8s;
    -o-transition: 0.8s;
    -ms-transition: 0.8s;
    transition: 0.8s;
}

.findMe {
    font-family: "Calibri", "Arial", "Serif";
    margin: 0 3vw;
    text-align: justify;
    font-size: 1vw;
}

.bold {
    font-weight: bold;
}

#socialBox {
    float: right;
    clear: both;
    margin-right: 3vw;
}

.socialButton {
    width: 2vw;
    height: 2vw;
    margin: 0vw 0.2vw;
    position: relative;
    margin-bottom: 0vw;
    -webkit-transition: 0.8s;
    -moz-transition: 0.8s;
    -o-transition: 0.8s;
    -ms-transition: 0.8s;
    transition: 0.8s;
}

.socialButton:hover {
    transform: scale(1.5);
}


/*----------Form----------------------------*/


/*----------Main content----------------------------*/

